# tracker

./: .env.tmpl  .gitignore  .pre-commit-config.yaml  Dockerfile  EXAMPLE_CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  README.md  README_ENHANCED_FEATURES.md  README_FRAMEWORK.md  README_PLUGIN_SYSTEM.md  README_REFACTORED.md  README_SIMPLIFIED_LOGGING.md  create_test_image.py  demo_configuration.py  pyproject.toml  test_api_with_file.py  test_array_fixes.py  test_body_roi.py  test_config_loader.py  test_method.py  test_payload.json  test_smolvlm_body.py  test_smolvlm_direct.py  test_smolvlm_plugin.py  test_smolvlm_real.py  test_smolvlm_with_manager.py  test_specific_fixes.py  test_tracking_fixes.py  uv_app_config.json  uv_app_config_example.json  video_stream_processor.py
streamlit_app/: README.md  __init__.py  config_manager.py  start_configurator.sh  stop_streamlit.sh  streamlit_configurator.py  test_imports.py
test_tracked_people/person_1/: encodings.npy  metadata.json
uv_app/: __init__.py  __main__.py  actions.py  app.py  cleanup_person_data.py  config.py  config_loader.py  demo_framework.py  extras.py  logging_config.py  main.py  person.py  settings.py  test_framework.py  tracker.py  utils.py
uv_app/core/: __init__.py  data_manager.py  detection.py  logging.py  person.py  recognition.py  storage.py  tracking.py
uv_app/examples/: framework_demo.py  plugin_example.py  smolvlm_demo.py  smolvlm_example.py
uv_app/modules/: __init__.py  capture_manager.py
uv_app/plugins/: __init__.py  activity_plugin.py  api_emotion_plugin.py  api_plugin.py  base.py  body_analysis_plugin.py  emotion_logger_plugin.py  emotion_plugin.py  face_image_plugin.py  manager.py  person_event_logger.py  pose_analysis_plugin.py  smolvlm_plugin.py
uv_app/scripts/: cleanup_duplicates.py  manage_people.py
uv_app/streamlit_app/: streamlit_configurator.py
uv_app/ui/: __init__.py  display.py  management.py
uv_app/utils/: __init__.py  helpers.py  validators.py
(+4 files in other folders)
